--- a/style.css
+++ b/style.css
@@ -88,41 +88,41 @@ body {
     margin-bottom: 0.1 em;
 }
 
-.descricao__texto{
+.descricao__texto {
     color: var(--cinza-secundario);
 }
 
-.secundario__botao{
+.secundario__botao {
     display: inline-block;
     margin-top: 1em;
 }
 
-.container__descricao{
+.container__descricao {
     padding: 2em;
 }
 
-.dispositivos{
+.dispositivos {
     text-align: center;
 }
 
-.dispositivos__titulo{
+.dispositivos__titulo {
     font-size: 3rem;
     color: var(--branco-principal);
 }
 
-.dispositivos__lista{
+.dispositivos__lista {
     display: flex;
     justify-content: center;
     list-style-type: none;
     margin: 5em 0;
 }
 
-.dispositivos__item{
+.dispositivos__item {
     font-size: 2rem;
     color: var(--branco-principal);
 }
 
-.rodape{
+.rodape {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -131,28 +131,65 @@ body {
     text-align: center;
 }
 
-.rodape__lista{
+.rodape__lista {
     list-style-type: none;
     display: flex;
     gap: 1rem;
     margin: 2.5rem 0 1.5rem 0;
 }
 
-.lista__link a{
+.lista__link a {
     text-decoration: none;
-    color:var(--branco-principal);
+    color: var(--branco-principal);
 }
 
-.lista__link a:hover{
+.lista__link a:hover {
     color: var(--botao-azul);
 }
 
-.lista__link a:active{
+.lista__link a:active {
     color: purple;
 }
 
-.rodape__texto{
-    font-size:0.875rem;
-    color:var(--cinza-secundario);
+.rodape__texto {
+    font-size: 0.875rem;
+    color: var(--cinza-secundario);
     margin-bottom: 1rem;
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        display: flex;
+        background-image: none;
+        align-items: center;
+    }
+
+    .secundario{
+        display: block;
+    }
+
+    .container__imagem{
+        width: 50vw;
+    }
+
+    .container__caixa{
+        margin: 2em;
+    }
+
+    .secundario{
+        margin: 0;
+        text-align: center;
+    }
+
+    .secundario__imagem{
+        width: 50vw;
+    }
+
+    .dispositivos__lista{
+        display: block;
+    }
+
+    .rodape__lista{
+        display: block;
+    }
 }
